refactor: query books use case